# gladiator

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  conclusions.json  fixme.json  gladiator.toml
gladiator-agent/: Cargo.toml
gladiator-agent/src/: actor.rs  five_whys.rs  internal_tools.rs  lib.rs  outgoing_doctor.rs  persistence.rs  state.rs  todo.rs
gladiator-agent/tests/: agent_test.rs
gladiator-core/: Cargo.toml
gladiator-core/src/: actor.rs  bus.rs  config.rs  lib.rs  message.rs
gladiator-core/tests/: config_tools_test.rs  core_tests.rs
gladiator-llm/: Cargo.toml
gladiator-llm/src/: actor.rs  args_fixer.rs  auth.rs  config.rs  endpoint.rs  error.rs  event.rs  framing.rs  generate_object.rs  lib.rs  lifecycle.rs  model_probe.rs  openai_chat.rs  protocol.rs  provider.rs  request.rs  route.rs  schema.rs  similarity.rs  standalone.rs  tool_call_rescue.rs  tool_runtime.rs  tool_stream.rs  transport.rs
gladiator-llm/tests/: llm_test.rs
gladiator-server/: Cargo.toml
gladiator-server/src/: index.html  lib.rs  main.rs  server.rs
gladiator-server/tests/: server_tests.rs
gladiator-tools/: Cargo.toml
gladiator-tools/src/: builtin.rs  conclusions.rs  fixme.rs  lib.rs  mcp.rs  mcp_admin.rs  registry.rs  runner.rs  tool.rs  webfetch.rs
gladiator-tools/tests/: builtin_test.rs  conclusions_test.rs  fixme_test.rs  mcp_test.rs  tools_test.rs
gladiator-tui/: Cargo.toml
gladiator-tui/src/: app.rs  commands.rs  diff_render.rs  event.rs  lib.rs  main.rs  render.rs  state.rs  theme.rs
gladiator-tui/tests/: emacs_keys_test.rs  tui_test.rs
mcp-loader/: Cargo.toml
mcp-loader/src/: main.rs
mcp-pdf-server/: Cargo.toml
mcp-pdf-server/src/: main.rs
mcp-pty-server/: Cargo.toml  README.md
mcp-pty-server/src/: keys.rs  main.rs  manager.rs  session.rs
mcp-random/: Cargo.toml
mcp-random/src/: main.rs
mcp-rlsp/: Cargo.toml  LICENSE
mcp-rlsp/src/: main.rs
mcp-rlsp/src/analyzer/: client.rs  mod.rs  project_manager.rs  protocol.rs
mcp-rlsp/src/server/: handler.rs  parameters.rs
mcp-rlsp/src/tools/: advanced.rs  analysis.rs  mod.rs  navigation.rs  quality.rs  refactoring.rs  types.rs
mcp-rlsp/tests/: integration_test.rs  lsp_integration_test.rs  ra_deps_test.rs
mcp-tagged-fileops/: Cargo.toml
mcp-tagged-fileops/src/: main.rs
mcp-test-client/: Cargo.toml
mcp-test-client/src/: main.rs
mcp-websearch/: Cargo.toml
mcp-websearch/src/: main.rs
misc/: system.txt
src/: debug_layer.rs  main.rs
tests/: e2e_test.rs  integration_test.rs
