[workspace]
members = [
    ".",
    "gladiator-core",
    "gladiator-llm",
    "gladiator-tools",
    "gladiator-agent",
    "gladiator-tui",
    "gladiator-server",
    "mcp-random",
    "mcp-rlsp",
    "mcp-websearch",
    "mcp-tagged-fileops",
]
resolver = "2"

[package]
name = "gladiator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gladiator"
path = "src/main.rs"

[dependencies]
gladiator-core = { path = "gladiator-core" }
gladiator-llm = { path = "gladiator-llm" }
gladiator-tools = { path = "gladiator-tools" }
gladiator-agent = { path = "gladiator-agent" }
gladiator-tui = { path = "gladiator-tui" }
gladiator-server = { path = "gladiator-server" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
