[package]
name = "gladiator-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "gladiator_agent"
path = "src/lib.rs"

[dependencies]
gladiator-core = { path = "../gladiator-core" }
gladiator-llm = { path = "../gladiator-llm" }
gladiator-tools = { path = "../gladiator-tools" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
