[package]
name = "gladiator-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "gladiator_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
