[package]
name = "gladiator-llm"
version = "0.1.0"
edition = "2024"

[lib]
name = "gladiator_llm"
path = "src/lib.rs"

[dependencies]
gladiator-core = { path = "../gladiator-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
