[package]
name = "gladiator-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "gladiator_server"
path = "src/lib.rs"

[[bin]]
name = "gladiator-server"
path = "src/main.rs"

[dependencies]
gladiator-core = { path = "../gladiator-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
