[package]
name = "gladiator-tools"
version = "0.1.0"
edition = "2024"

[lib]
name = "gladiator_tools"
path = "src/lib.rs"

[dependencies]
gladiator-core = { path = "../gladiator-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.16", features = ["client", "transport-io", "transport-child-process"] }
glob = "0.3"
regex = "1"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
