[package]
name = "gladiator-tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "gladiator_tui"
path = "src/lib.rs"

[[bin]]
name = "gladiator-tui"
path = "src/main.rs"

[dependencies]
gladiator-core = { path = "../gladiator-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
